--- a/about.html
+++ b/about.html
@@ -23,11 +23,9 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Electrical</a></li>
-                <li><a href="#">Plumbing</a></li>
+                <li><a href="electrical.html">Electrical</a></li>
                 <li><a href="#">HVAC</a></li>
                 <li><a href="#">Generators</a></li>
-                <li><a href="#">Drain & Sewer</a></li>
                 <li><a href="#">Service Areas</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -38,10 +36,10 @@
     <div class="about-section">
         <h1>About Us</h1>
         <h2>Surrey's Preferred Home Service Contractor</h2>
-        <p>Our purpose is to make your home as comfortable and as safe as possible. This is why we work tirelessly doing electrical, plumbing, and heating & air system repairs in and around the Atlanta Metro area. Whether we are repairing your hot water or installing an electric vehicle charger our goal is to help you enjoy your home to the fullest.</p>
+        <p>Our purpose is to make your home as comfortable and as safe as possible. This is why we work tirelessly doing electrical and heating & air system repairs in and around the Vancouver Metro area. Whether we are repairing your hot water or installing an electric vehicle charger our goal is to help you enjoy your home to the fullest.</p>
 
         <div class="customer-benefits">
-            <img src="images/customer-photo.jpg" alt="Customer photo">
+            <img src="customer-photo.jfif" alt="Customer photo">
             <ul>
                 <li>Easy Scheduling</li>
                 <li>A 30 minute call-ahead on all appointments</li>
@@ -56,20 +54,53 @@
         <p>We started the TE Certification Program as a way to ensure the highest standard in our company. Our program focuses on providing outstanding customer service and quality work to condign with our electricians. To be a TE Certified Technician you must have over 5 years of residential experience, be drug-free and fingerprinted by the GA State law, and pass written and hands-on tests at the TE Lab of Electrical Excellence. We set the bar high for service, attend weekly and annual training, and maintain a clean driving record. In addition, TE Certified Technicians dress in professional uniforms, wear shoe covers, post signs, and cleanup. In short, they are the type of professionals you would want in your home.</p>
 
         <h2>Lifetime Workmanship Warranty</h2>
-        <p>Never worry about electrical, plumbing or HVAC problems again. We warranty our workmanship for life. That means, if your installation ever fails because of poor quality, we will return and fix it for free. We are committed to you and want to be your go-to company for electrical, plumbing and heating & air repairs for life. We know our work must stand the test of time. This is the best warranty offered by any electrical, plumbing or heating & air company in Atlanta.</p>
+        <p>Never worry about electrical or HVAC problems again. We warranty our workmanship for life. That means, if your installation ever fails because of poor quality, we will return and fix it for free. We are committed to you and want to be your go-to company for electrical and heating & air repairs for life. We know our work must stand the test of time. This is the best warranty offered by any electrical or heating & air company in Surrey.</p>
 
         <h2>Our Reputation</h2>
         <p>Our focus on outstanding service shows in the positive reviews we receive from our customers. We have more than 3,500 positive reviews online. We have won Angie's List “Super Service Award” for Best Atlanta Electrician 8 years in a row. We are A+ rated by the Better Business Bureau every year and won an EBSCO “Best Pick Company” 5-Star Rating, Kudzu “Best in Atlanta” Award, and a Select Service's “Preferred Contractor”. Our reputation means what we say matters. We want to make sure you are happy with our service and join our group of happy customers.</p>
 
         <h2>Our Commitment</h2>
-        <p>We want to make your experience at TE as easy as possible so we offer same-day service with clear arrival windows. We give you a thirty-minute call ahead so you know exactly when we will get to the house. We work on Saturdays so you do not have to take off work and we drive fully stocked trucks that can fix the problem in one trip. We even handle all the permits and inspections and help you apply for Home Rebates. We accept credit cards and offer financing for unexpected events. And, we provide emailed invoices so you never lose your receipts.</p>
+        <p>We want to make your experience at TE as easy as possible so we offer same-day service with clear arrival windows. We give you a thirty-minute call ahead so you know exactly when we will get to the house. We work on Saturdays and Sundays so you do not have to take off work and we drive fully stocked trucks that can fix the problem in one trip. We even handle all the permits and inspections and help you apply for Home Rebates. We accept credit cards and offer financing for unexpected events. And, we provide emailed invoices so you never lose your receipts.</p>
         
         <a href="contact.html">
         <button class="contact-button">Contact Us</button>
         </a>
         <h2>Service Area</h2>
-        <p>TE sends its electricians, air condition technicians, and plumbers all over the North Atlanta area including Alpharetta, Roswell, Marietta, Cumming, Dunwoody, and Suwanee. We also send our technicians to parts of South Atlanta for major repairs and projects, plumbers to Norcross, Johns Creek, Duluth, Acworth, and Chambrelie and our air condition technicians to Kennesaw, Woodstock, and our plumbers to Brookhaven, Buckhead, and Tucker all the time. If you live in Vinings, Canton, Mountain Park, Lawrenceville, or Smyrna we can have a TE Certified Electrician, Plumber, or HVAC specialist out to your house quickly. Some areas do have travel fees to cover the increased time and distance. However, you will never pay twice, and we always advance quickly! Call us to get a TE Certified Technician at your door today.</p>
+        <p>Intact Electrical sends its electricians and air condition technicians all over the Vancouver area including Surrey, Burnaby, Delta, Richmond, Langley, and White Rock. We also send our technicians to parts of Abbotsford for major repairs and projects. If you live in Vancouver metro area, we can have a Intact Electrical's Electrician or HVAC specialist out to your house quickly. Some areas do have travel fees to cover the increased time and distance. However, you will never pay twice, and we always advance quickly! Call us to get a Intact Electrical Technician at your door today.</p>
     </div>
 </main>
 </body>
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h2>Intact Electrical</h2>
+          <p>123 Main Street, Surrey, BC 30301</p>
+          <p>Email: contact@company.com</p>
+          <p>Phone: (123) 456-7890</p>
+        </div>
+        <div class="footer-section links">
+          <h2>Quick Links</h2>
+          <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="footer-section social">
+          <h2>Follow Us</h2>
+          <ul>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 Company Name. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </html>
