--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,9 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Electrical</a></li>
-                <li><a href="#">Plumbing</a></li>
+                <li><a href="electrical.html">Electrical</a></li>
                 <li><a href="#">HVAC</a></li>
                 <li><a href="#">Generators</a></li>
-                <li><a href="#">Drain & Sewer</a></li>
                 <li><a href="#">Service Areas</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -91,4 +89,37 @@
     </div>
 </main>
 </body>
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h2>Intact Electrical</h2>
+          <p>123 Main Street, Surrey, BC 30301</p>
+          <p>Email: contact@company.com</p>
+          <p>Phone: (123) 456-7890</p>
+        </div>
+        <div class="footer-section links">
+          <h2>Quick Links</h2>
+          <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="footer-section social">
+          <h2>Follow Us</h2>
+          <ul>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 Company Name. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </html>
