--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Electrical</a></li>
+                <li><a href="electrical.html">Electrical</a></li>
                 <li><a href="#">HVAC</a></li>
                 <li><a href="#">Generators</a></li>
-                <li><a href="#">Drain & Sewer</a></li>
                 <li><a href="#">Service Areas</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
